# ML-PAPERS-IMPLEMENTATION

./: .gitignore
BPE/: basic_bpe_tokenizer.py  regex_bpe_tokenizer.py
GPT2_124M/: model.py
MiniMistral_8_7/: Attention.py  Dataset.py  MOE.py  README.md  Train_with_shakespeare.py  TransformerBlock_module.py  config.py  generate_text.py  main.py  model.py  pyproject.toml  rope.py  test.ipynb  tokenizer.py  train.py  utils.py
Vision_Transformer_model/: ImageEmbedding.py  MultiHeadAttention.py  TransformerEncoderBlock.py  model.py
